--- a/css/main.css
+++ b/css/main.css
@@ -195,7 +195,7 @@ a.nav-link {
 
 #about {
   padding: 70px 0 25px 0;
-  background: #fcfcfc;
+  background: #fafafa;
 
 }
 
@@ -288,13 +288,17 @@ a.nav-link {
 
 */
 
+*, *::before, *::after {
+ box-sizing: border-box;
+}
+
+#frontend-home, #robot {
+  padding: 150px 0;
+}
+
 .main.page-title header {
   margin-bottom: 150px;
 }
-
-
-
-
 
 /* ==========================================================================
     LANDING PAGE EXCERCISE
@@ -303,11 +307,16 @@ a.nav-link {
 */
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-.landing-row {
-  margin-top: 100px;
-  padding-top: 100px;
-  padding-bottom: 100px;
+#excercise-landing {
+  background: #fafafa;
+  padding: 150px 0;
 }
+
+/*.excercises-row {
+  margin-top: 100px;
+  padding-top: 150px;
+  padding-bottom: 150px;
+}*/
 
 #landing-page h2, #landing-page h6, #landing-page .my-btn {
   font-family: 'Montserrat', sans-serif;
@@ -326,6 +335,7 @@ a.nav-link {
   justify-content: center;
   display: flex;
   align-items: center;
+  margin-top: 50px;
 }
 
 #landing-page .content {
@@ -349,6 +359,129 @@ a.nav-link {
   padding: 10px 20px;
   margin: 80px auto auto auto;
   text-transform: uppercase;
+}
+
+/* ==========================================================================
+    ROBOT EXCERCISE
+  ===========================================================================
+
+*/
+
+.robots {
+	text-align: center;
+  margin: 50px;
+}
+
+.head,
+.left_arm,
+.torso,
+.right_arm,
+.left_leg,
+.right_leg {
+	 background-color: #673ab7;
+}
+
+.head {
+	width: 200px;
+	margin: 0 auto;
+	height: 150px;
+	border-radius: 200px 200px 0 0;
+	margin-bottom: 10px;
+}
+
+.eyes {
+
+}
+
+.head:hover {
+	width: 300px;
+  transition: .5s ease-in-out;
+}
+
+.upper_body {
+	width: 300px;
+	height: 150px;
+	display: flex;
+	justify-content: center;
+	margin: 0 auto;
+}
+
+.left_arm, .right_arm {
+	width: 40px;
+	height: 125px;
+	border-radius: 100px;
+}
+
+.left_arm {
+	margin-right: 10px;
+}
+
+.right_arm {
+	margin-left: 10px;
+}
+
+.torso {
+	width: 200px;
+	height: 200px;
+	border-radius: 0 0 50px 50px;
+}
+
+.lower_body {
+	width: 200px;
+	height: 200px;
+	margin: 0 auto;
+}
+
+.left_leg, .right_leg {
+	width: 40px;
+	height: 120px;
+	border-radius: 0 0 100px 100px;
+}
+
+.left_leg {
+	margin-left: 45px;
+}
+
+.left_leg:hover, .left_arm:hover {
+	-webkit-transform: rotate(20deg);
+    -moz-transform: rotate(20deg);
+    -o-transform: rotate(20deg);
+    -ms-transform: rotate(20deg);
+    transform: rotate(20deg);
+}
+
+.right_leg:hover, .right_arm:hover {
+	-webkit-transform: rotate(-20deg);
+    -moz-transform: rotate(-20deg);
+    -o-transform: rotate(-20deg);
+    -ms-transform: rotate(-20deg);
+    transform: rotate(-20deg);
+}
+
+.right_leg {
+	margin-left: 30px;
+	left: 90px;
+	position: relative;
+	top: -120px;
+}
+
+.left_eye, .right_eye {
+	width: 20px;
+	height: 20px;
+	border-radius: 15px;
+	background-color: white;
+}
+
+.left_eye {
+	position: relative;
+	top: 100px;
+	left: 40px;
+}
+
+.right_eye {
+	position: relative;
+	top: 80px;
+	left: 140px;
 }
 
 
