--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,34 @@ a.nav-link {
   font-weight: 500;
 }
 
+p.dropdown-item {
+  font-weight: 500;
+  color: #535461;
+  text-transform: lowercase;
+}
+
+p.dropdown-item:hover {
+  background: inherit;
+}
+
+header h1 {
+  text-transform: lowercase;
+}
+
+header h6 {
+  text-transform: uppercase;
+}
+
+.mybtn {
+  box-shadow: 0px 6px 11px -5px rgba(0, 0, 0, 0.4);
+}
+
+.mybtn:hover {
+  box-shadow: 0px 15px 26px -8px rgba(0, 0, 0, 0.4);
+  background-color: #ffc107;
+    border-color: #ffc107;
+}
+
 /* ==========================================================================
     HERO
   ===========================================================================
@@ -283,7 +311,7 @@ a.nav-link {
 }
 
 /* ==========================================================================
-    EXCERCISES NEWPAGE
+    HTML/CSS EXCERCISES NEWPAGE
   ===========================================================================
 
 */
@@ -292,7 +320,7 @@ a.nav-link {
  box-sizing: border-box;
 }
 
-#frontend-home, #robot {
+#html-css-home, #robot, #javascript-home {
   padding: 150px 0;
 }
 
@@ -311,12 +339,6 @@ a.nav-link {
   background: #fafafa;
   padding: 150px 0;
 }
-
-/*.excercises-row {
-  margin-top: 100px;
-  padding-top: 150px;
-  padding-bottom: 150px;
-}*/
 
 #landing-page h2, #landing-page h6, #landing-page .my-btn {
   font-family: 'Montserrat', sans-serif;
@@ -483,6 +505,47 @@ a.nav-link {
 	top: 80px;
 	left: 140px;
 }
+
+/* ==========================================================================
+    JAVASCRIPT EXCERCISES NEWPAGE
+  ===========================================================================
+
+*/
+
+.code-description {
+  padding: 50px 0;
+}
+
+.pre-scrollable {
+  /*max-height: 300px;*/
+  overflow-y: scroll;
+}
+
+.code-bg {
+  background: #111;
+  color: #ffc107;
+}
+
+.number {
+  font-size: 10em;
+  padding: 10rem 0 5rem 0;
+  color: #eee;
+  text-shadow: 0 20px 15px rgba(0, 0, 0, 0.2);
+}
+
+.output-bg {
+  background: #fafafa;
+  border-left: 4px solid #ffc107;
+}
+
+pre {
+  white-space: pre-line;
+  padding: 0 20px;
+}
+samp {
+  padding: 0 20px;
+}
+
 
 
 
