--- a/css/main.css
+++ b/css/main.css
@@ -10,11 +10,10 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
-html {
-    color: #222;
+/*html {
     font-size: 1em;
     line-height: 1.4;
-}
+}*/
 
 /*
  * Remove text-shadow in selection highlight:
@@ -26,7 +25,7 @@ html {
  * Customize the background color to match your design.
  */
 
-::-moz-selection {
+/*::-moz-selection {
     background: #b3d4fc;
     text-shadow: none;
 }
@@ -34,20 +33,20 @@ html {
 ::selection {
     background: #b3d4fc;
     text-shadow: none;
-}
+}*/
 
 /*
  * A better looking default horizontal rule
  */
 
-hr {
+/*hr {
     display: block;
     height: 1px;
     border: 0;
     border-top: 1px solid #ccc;
     margin: 1em 0;
     padding: 0;
-}
+}*/
 
 /*
  * Remove the gap between audio, canvas, iframes,
@@ -55,32 +54,32 @@ hr {
  * https://github.com/h5bp/html5-boilerplate/issues/440
  */
 
-audio,
+/*audio,
 canvas,
 iframe,
 img,
 svg,
 video {
     vertical-align: middle;
-}
+}*/
 
 /*
  * Remove default fieldset styles.
  */
 
-fieldset {
+/*fieldset {
     border: 0;
     margin: 0;
     padding: 0;
-}
+}*/
 
 /*
  * Allow only vertical resizing of textareas.
  */
 
-textarea {
+/*textarea {
     resize: vertical;
-}
+}*/
 
 /* ==========================================================================
    Browser Upgrade Prompt
@@ -125,7 +124,8 @@ p {
 }
 
 .fixed-top {
-  box-shadow: 0px 1px 14px 0px rgba(0, 0, 0, 0.1);
+  /*box-shadow: 0px 1px 14px 0px rgba(0, 0, 0, 0.1);*/
+  border-bottom: 1px solid #eee;
 }
 
 a.nav-link {
@@ -162,6 +162,8 @@ header h6 {
 
 .mybtn {
   box-shadow: 0px 6px 11px -5px rgba(0, 0, 0, 0.4);
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .mybtn:hover {
@@ -170,13 +172,44 @@ header h6 {
     border-color: #ffc107;
 }
 
+.exercise {
+  /*border-bottom: 1px solid #f4f4f4;*/
+  padding-bottom: 100px;
+}
+
+aside {
+  position: fixed;
+  width: 12%;
+  height: 93%;
+  z-index: 2;
+  top: 7%;
+  left:0;
+  background: #f9f9f9;
+  overflow-y: scroll;
+  padding: 10px;
+}
+
+aside a {
+  color: #495057;
+}
+
+#sidebar-title {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-transform: capitalize;
+}
+
+main {
+  margin-left: 12%;
+}
+
 /* ==========================================================================
     HERO
   ===========================================================================
 
 */
 
-#home header, #excercises header {
+#home header, #exercises header {
   padding-bottom: 100px;
   margin-top: 70px;
 }
@@ -311,7 +344,7 @@ header h6 {
 }
 
 /* ==========================================================================
-    HTML/CSS EXCERCISES NEWPAGE
+    HTML/CSS exerciseS NEWPAGE
   ===========================================================================
 
 */
@@ -329,13 +362,13 @@ header h6 {
 }
 
 /* ==========================================================================
-    LANDING PAGE EXCERCISE
+    LANDING PAGE exercise
   ===========================================================================
 
 */
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-#excercise-landing {
+#exercise-landing {
   background: #fafafa;
   padding: 150px 0;
 }
@@ -384,7 +417,7 @@ header h6 {
 }
 
 /* ==========================================================================
-    ROBOT EXCERCISE
+    ROBOT exercise
   ===========================================================================
 
 */
@@ -507,7 +540,7 @@ header h6 {
 }
 
 /* ==========================================================================
-    JAVASCRIPT EXCERCISES NEWPAGE
+    JAVASCRIPT exerciseS NEWPAGE
   ===========================================================================
 
 */
@@ -522,8 +555,10 @@ header h6 {
 }
 
 .code-bg {
-  background: #111;
+  background: #343a40;
   color: #ffc107;
+  border-radius: 4px;
+  border: 4px solid #6c757d;
 }
 
 .number {
@@ -546,6 +581,13 @@ samp {
   padding: 0 20px;
 }
 
+h2.page-title {
+  padding-top: 70px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-align: center;
+  color: #575988;
+}
 
 
 
