--- a/css/main.css
+++ b/css/main.css
@@ -179,10 +179,10 @@ header h6 {
 
 aside {
   position: fixed;
-  width: 12%;
+  width: 14%;
   height: 93%;
   z-index: 2;
-  top: 7%;
+  top: 57px;
   left:0;
   background: #f9f9f9;
   overflow-y: scroll;
@@ -193,6 +193,14 @@ aside a {
   color: #495057;
 }
 
+#toggle {
+  display: none;
+}
+
+#mobile-sidebar {
+  display: none;
+}
+
 #sidebar-title {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -200,7 +208,7 @@ aside a {
 }
 
 main {
-  margin-left: 12%;
+  margin-left: 14%;
 }
 
 /* ==========================================================================
@@ -591,10 +599,52 @@ h2.page-title {
 
 
 
+@media(max-width: 1340px) {
+  aside {
+    width: 18%;
+  }
+
+  main {
+    margin-left: 18%;
+  }
+}
+
+@media(max-width: 1040px) {
+  aside {
+    width: 24%;
+  }
+
+  main {
+    margin-left: 24%;
+  }
+}
 
 
 
+@media(max-width: 800px) {
+  #toggle{
+    display: block;
+    position: fixed;
+    top: 12%;
+    z-index: 1030;
+  }
 
+  aside {
+    display: none;
+  }
+
+  main {
+    margin: 0;
+  }
+
+  #mobile-sidebar {
+    display: block;
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    top: 57px;
+  }
+}
 
 
 
